feat: implement API-first governance with comprehensive config management
Major changes:
- Fix Dockerfile build context to include API specification for OpenAPI code generation
- Restructure Spring Boot configuration with profile-specific properties (local/dev/test/prod)
- Make security configuration environment-aware (CORS origins, admin credentials)
- Add comprehensive development cheatsheet with Docker, testing, and security scanning commands
- Update docker-compose.yml build context for proper multi-stage builds

Backend improvements:
- WebSecurityConfig now uses @Value for configurable CORS and credentials
- Complete application properties for all profiles with detailed documentation
- Proper separation of concerns (local dev vs shared dev vs test vs production)
- Enhanced security defaults (cookie.secure, session tracking, error handling)

Documentation:
- Add extensive dev-cheatsheet.md covering all development workflows
- Update README.md with Docker quick commands
- Document all Maven goals, npm scripts, security tools, and troubleshooting

This enables proper API-first development with validated OpenAPI specifications
driving both backend code generation and frontend client generation.